--- a/Application/aspnet-core-dotnet-core/appsettings.json
+++ b/Application/aspnet-core-dotnet-core/appsettings.json
@@ -3,6 +3,10 @@
     "LogLevel": {
       "Default": "Warning"
     }
+
+  },
+  "connectionStrings": {
+    "defaultConnection": "Server=tcp:testone117.database.windows.net,1433;Initial Catalog=DB_Tarjetas;Persist Security Info=False;User ID=Anglex223;Password=17Ene2002@Angel;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
   },
   "AllowedHosts": "*"
 }
