Solucion de Error Swagger

--- a/Application/aspnet-core-dotnet-core/appsettings.json
+++ b/Application/aspnet-core-dotnet-core/appsettings.json
@@ -6,7 +6,7 @@
 
   },
   "connectionStrings": {
-    "defaultConnection": "Server=tcp:testone117.database.windows.net,1433;Initial Catalog=DB_Tarjetas;Persist Security Info=False;User ID=Anglex223;Password=17Ene2002@Angel;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
+    "defaultConnection": "Server=tcp:testone117.database.windows.net,1433;Initial Catalog=DB_Tarjetas2.0;Persist Security Info=False;User ID=Anglex223;Password=17Ene2002@Angel;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
   },
   "AllowedHosts": "*"
 }
